Update sigma directory